--- a/workorder_app/templates/workorder_list.html
+++ b/workorder_app/templates/workorder_list.html
@@ -9,8 +9,37 @@
         <link rel="stylesheet" href="{% static 'css/workorder_list.css' %}">
     </head>
     <body>
-        <h1 class="title">Work Orders</h1>
-        
-        <!-- Feature project mock up-->
+        <div class="d-flex justify-content-center">
+            <img class="mr-3 feature-thumbnail" src="{% static "images/dogwithhat.jpg" %}" width="100px" height="100px">
+            <span class="title">Work Orders</span>
+        </div>
+        {% if workorders %}
+            <div class="media featured-project">        
+                <div class="media-body container-fluid featured-project-table">
+                    <ul>
+                        <li>
+                            <div class="row">
+                                <div class="col">Work Order</div>
+                                <div class="col">Description</div>
+                                <div class="col">Size</div>
+                                <div class="col">Due Date</div>
+                            </div>
+                        </li>
+                    {% for wo in workorders %}
+                        <li>
+                            <div class="row project-row">
+                                <div class="col">{{wo.workorder_number}}</div>
+                                <div class="col">{{wo.machine_type}}</div>
+                                <div class="col">{{wo.machine_size}}</div>
+                                <div class="col">{{wo.due_date}}</div>
+                            </div>
+                        </li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        {% else %}
+            <p>No work orders configured. Configure work orders in the admin console.</p>
+        {% endif %}
     </body>
 </html>
