--- a/workorder_app/templates/workorder_list.html
+++ b/workorder_app/templates/workorder_list.html
@@ -7,39 +7,16 @@
         <!-- Adds bootstrap CSS library.-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/workorder_list.css' %}">
+        <script src="{% static 'js/jquery.js' %}"></script>
+        <script src="{% static 'js/workorder_list.js' %}"></script>
     </head>
     <body>
-        <div class="d-flex justify-content-center">
-            {% comment %} <img class="mr-3 feature-thumbnail" src="{% static "images/dogwithhat.jpg" %}" width="100px" height="100px"> {% endcomment %}
-            <span class="title">Upcoming Work Orders</span>
+        <div id="top-title" class="d-flex justify-content-center align-items-center">
+            <span class="title">Work Orders</span>
+            <button onClick="fullScreen()"> Fullscreen</button>
         </div>
-        {% if workorders %}
-            <div class="media">        
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Work Order</th>
-                            <th scope="col">Description</th>
-                            <th scope="col">Size</th>
-                            <th scope="col">Due Date</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for wo in workorders %}
-                        <tr {% if wo.is_urgent %}class="table-danger"{% endif %}>
-                            <th scope="row">{{wo.index}}</th>
-                            <td>{{wo.workorder_number}}</td>
-                            <td>{{wo.machine_type}}</td>
-                            <td>{{wo.machine_size}}</td>
-                            <td>{{wo.due_date}}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        {% else %}
-            <p>No work orders configured. Configure work orders in the admin console.</p>
-        {% endif %}
+        <div id="workorder-table">
+        {% include "table.html" %}
+        </div>
     </body>
 </html>
