--- a/workorder_app/templates/workorder_list.html
+++ b/workorder_app/templates/workorder_list.html
@@ -11,11 +11,11 @@
         <script src="{% static 'js/workorder_list.js' %}"></script>
     </head>
     <body>
-        <div id="top-title" class="d-flex justify-content-center align-items-center">
+        <div id="top-title" class="d-flex justify-content-center align-items-center title-block">
             <span class="title">Work Orders</span>
             <button onClick="fullScreen()"> Fullscreen</button>
         </div>
-        <div id="workorder-table">
+        <div id="workorder-table" class="table-container">
         {% include "table.html" %}
         </div>
     </body>
