--- a/workorder_app/templates/table.html
+++ b/workorder_app/templates/table.html
@@ -4,7 +4,7 @@
           data-next-page="{{next_page}}" 
           data-refresh-rate="{{refresh_rate}}"
         {% endif %}>
-        <thead class="thead-dark">
+        <thead class="thead-dark table-head">
             <tr>
                 <th scope="col" style="width: 8%;">#</th>
                 <th scope="col" style="width: 14%;">Work Order</th>
@@ -13,9 +13,9 @@
                 <th scope="col" style="width: 20%;">Due Date</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="table-body">
             {% for wo in workorders %}
-            <tr {% if wo.is_urgent %}class="table-danger"{% endif %}>
+            <tr class="table-row {% if wo.is_urgent %} table-danger {% endif %}">
                 <th scope="row">{{wo.index}}</th>
                 <td>{{wo.workorder_number}}</td>
                 <td>{{wo.machine_type}}</td>
