--- a/workorder_app/static/css/workorder_list.css
+++ b/workorder_app/static/css/workorder_list.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+    height: 99%;
 }
 
 .title {
@@ -11,6 +11,11 @@ html, body {
     height: 15%;
 }
 
+.title-controls {
+    float: right;
+    display: inline-block;
+}
+
 .table-container {
     height: 85%;
 }
@@ -19,4 +24,18 @@ html, body {
     border-style: solid;
     border-width: 2px;
     border-color: rgb(17, 85, 161);
+}
+
+.table-head {
+    height: 12%;
+    font-size: 2em;
+}
+
+.table-body {
+    height: 88%;
+}
+
+.table-row {
+    height: 25%;
+    font-size: 3em;
 }
