--- a/workorder_app/static/css/workorder_list.css
+++ b/workorder_app/static/css/workorder_list.css
@@ -3,12 +3,13 @@ html, body {
 }
 
 .title {
-    font-size: 2.5em;
+    font-size: 3.5em;
     text-align: center;
 }
 
 .title-block {
-    height: 15%;
+    height: 10%;
+    width: 99%;
 }
 
 .button-wrapper {
@@ -16,7 +17,7 @@ html, body {
 }
 
 .table-container {
-    height: 85%;
+    height: 90%;
 }
 
 .project-row {
