Added App Config to admin settings.

--- a/workorder_app/templates/table.html
+++ b/workorder_app/templates/table.html
@@ -15,7 +15,7 @@
         </thead>
         <tbody class="table-body">
             {% for wo in workorders %}
-            <tr class="table-row {% if wo.is_urgent %} table-danger {% endif %}">
+            <tr class="table-row {% if wo.is_urgent %} table-danger {% endif %}" style="height: {{row_height}}!important">
                 <th scope="row" class="num-col">{{wo.index}}</th>
                 <td>{{wo.workorder_number}}</td>
                 <td>{{wo.machine_type}}</td>
