--- a/workorder_app/templates/workorder_list.html
+++ b/workorder_app/templates/workorder_list.html
@@ -17,7 +17,7 @@
             <div class="title-controls col-3">
                 <div class="button-wrapper align-baseline">
                     {% if debug %}<button class="btn btn-outline-secondary" onClick="togglePaging()">Page Toggle</button>{% endif %}
-                    <button class="btn btn-outline-primary" onClick="fullScreen()">Fullscreen</button>
+                    <button id="fullscreen-toggle" class="btn btn-outline-primary" onClick="fullScreen()">Fullscreen</button>
                 </div>
             </div>
         </div>
